tests/gen/testdata/configs/fail/platform_extension_invalid_cluster_size.jsonnet
// OKE extension rejects unknown cluster size profiles
// error_contains: config_params.cluster_size must be one of: small, medium, large
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      platforms: {
        oke: {
          network: { vcn: '10.0.16.0/20' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              cluster_size: 'tiny',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
